Fixed layout issues

--- a/CSS/prlCNSOverrides.scss
+++ b/CSS/prlCNSOverrides.scss
@@ -123,194 +123,6 @@ aside {
   }
 }
 
-/* HERO IMAGE POSITIONING AND TEXT STYLE: GENERAL STYLES AND LAPTOPS
--------------------------------------------------------- */
-
-#homepage {
-  .coverImage {
-    min-height: 450px !important;
-    height: 72.5vh !important;
-    .heroAlternateImageHeadingsContainer {
-      // Font weight for Hero Text
-      .heroAlternateImageHeading {
-        font-weight: 500; // Increasing font weight so text stands out
-        text-shadow: 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000;
-      }
-    }
-  }
-}
-
-@media (min-width: 1200px) {
-  // Large screens: hero image and text positioning
-  .coverImage {
-    background-position: center -50px !important;
-  }
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        .heroAlternateImageHeading {
-          // Changing size and position of hero text to fit screen elegantly
-          font-size: 3.75rem;
-          width: 40rem;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 1200px) and (max-height: 800px) {
-  // For 1280 x 800 laptops and 'short' screen sizes
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        // Adjusting placement of hero text
-        top: 20px !important;
-      }
-    }
-  }
-}
-
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (-webkit-min-device-pixel-ratio: 2), screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
-  // Retina Laptops
-  .coverImage {
-    background-position: center 0px !important;
-  }
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        top: 20px !important;
-        .heroAlternateImageHeading {
-          // Hero text smaller
-          font-size: 3.25rem;
-          width: 35rem;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
-  // Medium Laptop, non-Retina
-  .coverImage {
-    background-position: center 0px !important;
-  }
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        top: 20px !important;
-        .heroAlternateImageHeading {
-          // Hero text smaller
-          font-size: 3.25rem;
-          width: 35rem;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 1320px) {
-  // Large screens: to override CNS hero image style
-  .coverImage {
-    background-position: center -10px !important;
-  }
-}
-
-@media (min-width: 1400px) and (max-width: 1999px) {
-  // Large screens: hero text positioning
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        left: -50px;
-      }
-    }
-  }
-}
-
-@media (min-width: 1400px) {
-  // XL screens: Hero Text positioning
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        top: 100px !important; // Redundancy, in case CNS code changes position
-      }
-    }
-  }
-}
-
-@media (min-width: 2000px) {
-  // XL screens: Hero Text centered
-  #homepage {
-    .coverImage {
-      .heroAlternateImageHeadingsContainer {
-        .heroAlternateImageHeading {
-          // Changing size and position of hero text to fit screen elegantly
-          width: 57%;
-          margin: 0 auto;
-          text-align: center;
-        }
-      }
-    }
-  }
-}
-
-/* HERO IMAGE POSITIONING AND TEXT STYLE: TABLETS
--------------------------------------------------------- */
-
-@media (min-width: 768px) and (max-width: 1199px) {
-  // Tablet
-  #homepage {
-    .coverImage {
-      height: 60vh !important;
-      .heroAlternateImageHeadingsContainer {
-        top: 50px;
-        .heroAlternateImageHeading {
-          font-size: 3.25rem;
-          text-align: center;
-          margin-left: auto;
-          margin-right: auto;
-          padding-bottom: 4rem; // Adding padding to bottom of hero text when space is tight
-        }
-      }
-    }
-  }
-}
-
-/* Targeting iPADs */
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
-  .coverImage {
-    background-size: auto !important;
-    background-position: center -100px !important;
-    background-attachment: local !important; // Solves a mobile Safari issue where the background image zooms in dramatically if background attachment = "fixed"
-  }
-}
-
-/* HERO IMAGE POSITIONING AND TEXT STYLE: MOBILES
--------------------------------------------------------- */
-
-@media (max-width: 767px) {
-  // Mobile
-  .coverImage {
-    background-position: right 0px !important;
-    background-attachment: local !important; // Solves a mobile Safari issue where the background image zooms in dramatically if background attachment = "fixed"
-    background-size: auto !important;
-  }
-  #homepage {
-    .coverImage {
-      min-height: 65vh !important;
-      height: auto !important;
-      .heroAlternateImageHeadingsContainer {
-        .heroAlternateImageHeading {
-          // Hero text smaller, padding on top and bottom for smaller mobile sizes
-          font-size: 2.5rem;
-          padding: 1rem 0 2rem 0;
-          width: 100%;
-          font-weight: 500; // Increasing font weight so text stands out
-        }
-      }
-    }
-  }
-}
 
 /* PRL LINK STYLES
 -------------------------------------------------------- */
