--- a/CSS/prlCustomCSS-2020.scss
+++ b/CSS/prlCustomCSS-2020.scss
@@ -13,19 +13,6 @@
                 HOMEPAGE
 -------------------------------------------------------- */
 
-/* GENERAL
--------------------------------------------------------- */
-
-@media (max-width: 991px) {
-  .home {
-    .prl-row {
-      // Adds some white space on all prl-row classes for tablet and phones
-      padding-right: 9px;
-      padding-left: 9px;
-    }
-  }
-}
-
 /* HOMEPAGE BRANDS SECTION
 -------------------------------------------------------- */
 
@@ -423,6 +410,7 @@
         div {
           .hasImage {
             margin-bottom: 8px;
+            display: inline-block;
             .image {
               width: 110px;
               padding: 12px 16px 16px 12px;
@@ -436,7 +424,7 @@
           }
           .last.hasImage {
             // Hide last news item to shorten news section
-            display: inherit;
+            display: none;
           }
         }
       }
@@ -660,8 +648,6 @@
           -ms-flex-preferred-size: 33.333333%;
           flex-basis: 33.333333%;
           max-width: 33.333333%;
-          padding-left: 15px;
-          padding-right: 15px;
           @extend .prl-internal-logo-content-area;
         }
         div:last-child {
@@ -821,10 +807,26 @@
 }
 
 @media (min-width: 992px) {
-  //Large screens
+  //Large screens, making sure the main col doesn't hug edges
   .about {
     .mainContent__mainCol {
       padding: 0 2rem;
+    }
+  }
+}
+
+@media (min-width: 821px) {
+  .about {
+    .mainContent__mainCol {
+      section.prl-about-essence {
+        .prl-row {
+          .prl-about-essence-item {
+            // padding for larger screens, in order to separate containers
+            padding-right: 15px;
+            padding-left: 15px;
+          }
+        }
+      }
     }
   }
 }
@@ -1842,8 +1844,6 @@ div.prl-research-highlights {
       }
       .prl-grad-icon {
         // Padding so that icon areas don't hug edges of viewport
-        padding-right: 15px;
-        padding-left: 15px;
         @extend .prl-internal-logo-content-area;
       }
       span.prl-grad-puv-title {
@@ -1876,6 +1876,20 @@ div.prl-research-highlights {
           .mura-collection-item__holder {
             padding: 0 16px 0 0;
           }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 821px) {
+  .graduate-program-overview {
+    #MainContent {
+      section.prl-grad-puv {
+        .prl-grad-icon {
+          // Padding for larger screens to separate containers
+          padding-right: 15px;
+          padding-left: 15px;
         }
       }
     }
